--- a/render/html/default/tpl/main_svg.html
+++ b/render/html/default/tpl/main_svg.html
@@ -1,5 +1,1 @@
-
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB60l6eLOSvaG7KcCgbCUotsfsgHK-BShQ&sensor=false">
-    </script>
-    <center><div id="map-canvas"/></center>
+<div id="map_canvas" ></div>
