--- a/render/html/tpl/base.html
+++ b/render/html/tpl/base.html
@@ -110,10 +110,12 @@
 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 		{STATIC_CSS}
-		<link rel="icon" href="{DOC_LOGO_94.png}" sizes="any" type="image/svg+xml" />
-		<link rel="icon" href="{DOC_LOGO_57.png}" sizes="57x57" type="image/png" />
-		<link rel="icon" href="{DOC_LOGO_48.png}" sizes="32x32 48x48" type="image/vnd.microsoft.icon" />
-		<link rel="icon" href="{DOC_LOGO_16.png}" sizes="16x16" type="image/png" />
+
+		<link rel="icon" href="{DOC_LOGO_16}" sizes="16x16" type="image/png" />
+		<link rel="icon" href="{DOC_LOGO_48}" sizes="32x32 48x48" type="image/vnd.microsoft.icon" />
+  		<link rel=icon href="{DOC_LOGO_128}" sizes="128x128 512x512 8192x8192 32768x32768">
+		<link rel="icon" href="{DOC_LOGO_57}" sizes="57x57" type="image/png" />
+		<link rel="icon" href="{DOC_LOGO_94}" sizes="any" type="image/svg+xml" />
 		<meta name="HandheldFriendly" content="True" />
 		<meta name="MobileOptimized" content="32r0" />
 		<meta content="minimum-scale=1.0, width=device-width, maximum-scale=1.0, user-scalable=no" name="viewport" />
