--- a/render/html/tpl/base.html
+++ b/render/html/tpl/base.html
@@ -138,7 +138,9 @@
 			{MENU_MAIN}
 		</aside>
 		<article>
-			{SECTION_SVG}
+			<h2>TEST PAGE (SORRY)</h2>
+			{LIVE}
+			{MAIN_BOTTOM_SVG}
 		</article>
 		<footer>
 			{CONTACT}
