--- a/render/html/tpl/site_map.html
+++ b/render/html/tpl/site_map.html
@@ -1,36 +1,154 @@
 
 <h2>Site map</h2>
 <ul>
-	<li><h3>Happenstance</h3></li>
+	<li><h3>Happenstance</h3>
+		<ul>
+			<li>Home : Happenstance and serendipity applied to information</li>
+			<li>Gamification - Experience First
+				<ul>
+					<li>Customer segments</li>
+					<li>Value Proposition</li>
+					<li>Market Places</li>
+				</ul>
+			</li>
+			<li>StoryTelling -  The truth is a great story
+				<ul>
+					<li>You</li>
+					<li>Responsibility environmental and societal</li>
+					<li>Customers and access to value</li>
+				</ul>
+			</li>
+			<li>Workflows self-managed - Clever Production tools
+				<ul>
+					<li>Key Partners Internals as Externals</li>
+					<li>Federated dashboard (Big Index)</li>
+				</ul>
+			</li>
+			<li>Connected Ressources - Learning Share and Scoring
+				<ul>
+					<li>Hub and rules</li>
+					<li>Key Connected Resources</li>
+					<li>Cloud Resources</li>
+				</ul>
+			</li>
+		</ul>
+	</li>
+	<li><h3>This site (philosophy) : happenstance and serendipity applied to information</h3>
+		<ul>
+			<li>There is more truth in what we do not know in what we hope to know.
+				<ul>
+					<li>Information has properties that make its use unpredictable.</li>
+					<li>Designing an IS is especially organizing adaptation , openness and the "good" risk are needed.</li>
+					<li>New digital tools radically change the situation ( eg indexing instead of databases engines, BI webservices ... )</li>
+					<li>These tools will be operating with a methodology adapted exit: ITIL , Lean , PMP ...</li>
+					<li>A systemic vision : first I see the limits of what I know and associated experiences and I deduced where I need to be more curious or critical to understand the meaning of the overall system .</li>
+					<li>I am more interested in what I do not know that I know . I did not certainty but I find opportunities and reconciliations galore.</li>
+					<li>This is a fairly empirical and opposed to scientific approaches and forecasters who depart from the existing experience and finished and specific context to associate recognized that makes the most consensus solution approach.</li>
+					<li>Traditional approaches successfully solve 85% of problems.</li>
+					<li>With a different way of thinking , I'm more efficient, in anticipation, the strongs problems that resist the hardest and are the critical issues for the development of the company.</li>
+				</ul>
+			</li>
+			<li>A company is not producing but sharing experences high value for maximum direct and indirect stakeholders
+				<ul>
+					<li>The triptych "Cost quality time" is bullshit, the ROI is leading the relationship should last, projects must allow great experiences</li>
+					<li>Skills are less important than people and their history and thier vision (about past and futur)</li>
+					<li>Support activities (financial, accounting, purchasing, human resources, overhead, secretarial ...) disturb the reality of business. These are activities that generate sustained non-performing positions. But every employee should have the opportunity to directly participate in most important: the creation, production and sharing with the client.</li>
+				</ul>
+			</li>
+			<li>Vision for RSE (Responsibility societal and environmental)
+				<ul>
+					<li>The role of the state: a minimum of elected producing minimal laws to ensure a reasonable safety so :
+						<ul>
+							<li>What state is on top of that is unlawful, abusive, often broken and too expensive to be acceptable</li>
+							<li>Other powers (even sovereign) must return to responsible business</li>
+							<li>We must reorganize power in the company it must be balanced between the bottom/top, environnement/bottom, environnement/top</li>
+							<li>We must think that our achievement to bring humanity and planet</li>
+							<li>We must build transparancy and running playful</li>
+							<li>We must build a corporate altruism</li>
+							<li>We need to try</li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+			<li>Vision for IT
+				<ul>
+					<li>With connected production resources IT fonction is to produce a collective board / game</li>
+					<li>With connected production resources we don't need PC, Mobile, Tablet...</li>
+					<li>With connected production resources we don't need document, mails, webservices, databases...</li>
+					<li>With connected production resources we can't have its own IT infrastructure.</li>
+					<li>With connected production resources we need to have a connected dashbord for all workflows.</li>
+					<li>With connected production resources we need to have its own big index.</li>
+					<li>With connected production resources we need to have its own workflow management systems.</li>
+				</ul>
+			</li>
+			<li>Open Source License Under</li>
+		</ul>
+	</li>
+	<li><h3>This site (technical)</h3>
 	<ul>
-		<li>Profile</li>
-		<li>Tell you're story</li> 
-		<li>Customer segments</li> 
-		<li>Value Propositions</li>
-		<li>Channels</li>
-		<li>Key Activities</li>
-		<li>Key Partners</li>
-		<li>Cloud Resources</li>
+		<li>No external framework : learning what i can't do thinks myself and why</li>
+		<li>Easy real time without optimization bullshit : 1 instance for PC, mobile, tablet... and no "pre"compilating, no caching</li>
+		<li>No databases : when we "cast" an information we lots 80% of it's value</li>
+		<li>HTML5 full oriented
+			<ul>
+				<li>HTML5</li>
+				<li>CSS3</li>
+				<li>SVG</li>
+				<li>Device
+					<ul>
+						<li>Geolocalisation</li>
+						<li>Camera</li>
+					</ul>
+				</li>
+			</ul>
+		</li>
+		<li>Framework PHP 5.4 build for this site
+			<ul>
+				<li>Fonctionnal
+					<ul>
+						<li>Context hability : Themes</li>
+						<li>Context hability : Profils</li>
+						<li>Context hability : Localization</li>
+						<li>Context hability : Compaigns</li>
+						<li>Context hability : Web content about</li>
+						<li>Context hability : Tags</li>
+					</ul>
+				</li>
+				<li>Technical
+					<ul>
+						<li>Using search engine (big index) instead of webservices and others datas access</li>
+						<li>No MVC design cause not focus on the data but on the whole context</li>
+						<li>Template engine</li>
+						<li>Using spacenames</li>
+						<li>Using traits</li>
+						<li>Using abstract class</li>
+					</ul>
+				</li>
+			</ul>
+		</li>
+		<li>Infrastructure
+			<ul>
+				<li>No Multitier architecture : with cloud architecture, the application don't need to be N-Tier for have an exploitation and maintenance N-Tier</li>
+				<li>Using directories for datas</li>
+				<li>Cloud infrastucture
+					<ul>
+						<li>All resource for 1 app on 1 server on a cloud infrastrure</li>
+						<li>Infrastrure with private lan in <a href="http://gandi.net">Gandi.net</a></li>
+						<li>Lot of NFS links</li>
+						<li>Some search engine on POCs</li>
+						<li>All servers duplicate</li>
+						<li>Snapshoot 4 times by day</li>
+						<li>Pre-production process and servers</li>
+						<li>Integration process and servers</li>
+						<li>Demo = developement process and servers</li>
+					</ul>
+				</li>
+			</ul>
+		</li>
 	</ul>
-	<li><h3>This site (philosophy)</h3></li>
-	<ul>
-		<li>Vision for RSE (Responsibility societal and environmental)</li>
-		<li>Vision for IT</li> 
-		<li>Open Source License Under</li> 
-	</ul>
-	<li><h3>This site (technical)</h3></li>
-	<ul>
-		<li>HTML5</li> 
-		<li>CSS3</li> 
-		<li>SVG</li> 
-		<li>Device</li> 
-		<li>Geolocalisation</li> 
-		<li>Camera</li> 
-		<li>Framework PHP5.4</li> 
-		<li>Infrastructure</li> 
-	</ul>
-	<li><h3>Cloud solutions</h3></li>
-	<ul>
-		<li>...</li> 
-	</ul>
+	<li><h3>Cloud solutions</h3>
+		<ul>
+			<li>...</li>
+		</ul>
+	</li>
 </ul>
